--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.1",
     "cross-env": "^5.2.0",
     "iview": "^3.4.1",
     "koa": "^2.6.2",
